Update# App Days Final Push Q^Q

--- a/app/scripts/templates/Main.html
+++ b/app/scripts/templates/Main.html
@@ -1,6 +1,18 @@
 <div id="menu">
-  <a href="#/search">Search</a>
+  <div class="row">
+    <div class="span12">
+      <ul class="nav nav-tabs">
+        <li><a href="#/">Home</a></li>
+        <li><a href="#/search">Search</a></li>
+      </ul>
+    </div>
+  </div>
 </div>
-<div id="panel">
-  Loading...
+<div class="row">
+  <div class="span12">
+    <div id="panel">
+      Loading...
+    </div>
+  </div>
 </div>
+
