--- a/app/scripts/templates/Search.html
+++ b/app/scripts/templates/Search.html
@@ -1,3 +1,3 @@
 <div>
-  Keyword: <input id="keyword" name="keyword" type="text" /><button id="search">Search</button>
+  Keyword: <input id="keyword" name="keyword" type="text" /><button id="search" class="btn">Search</button>
 </div>
